--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,24 @@ ipch/
 *.vsp
 *.vspx
 
+# Rider
+# Rider auto-generates .iml files, and contentModel.xml
+**/.idea/**/*.iml
+**/.idea/**/contentModel.xml
+**/.idea/**/modules.xml
+
+*.suo
+*.user
+.vs/
+[Bb]in/
+[Oo]bj/
+_UpgradeReport_Files/
+[Pp]ackages/
+
+Thumbs.db
+Desktop.ini
+.DS_Store
+
 # Guidance Automation Toolkit
 *.gpState
 
