--- a/Sharp_Laba_1/Sharp_Laba_1/Sharp_Laba_1.csproj
+++ b/Sharp_Laba_1/Sharp_Laba_1/Sharp_Laba_1.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>Sharp_Laba_1</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -39,6 +40,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BarCode.cs" />
+    <Compile Include="Comparers.cs" />
+    <Compile Include="IPrinter.cs" />
+    <Compile Include="IProduct.cs" />
+    <Compile Include="IStorage.cs" />
     <Compile Include="Storage.cs" />
     <Compile Include="Printer.cs" />
     <Compile Include="Product.cs" />
